--- a/uknown_irvmv4.garden.json
+++ b/uknown_irvmv4.garden.json
@@ -6,30 +6,38 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569240556554,
-	"last_scraped": 1569251198482,
+	"last_scraped": 1569254173280,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569240556554
 		}
 	],
-	"next_scrape": 1569297415774,
+	"next_scrape": 1569300914198,
 	"category": "dice_roller",
-	"last_update": 1569251198482,
+	"last_update": 1569254173280,
 	"output": [
 		{
 			"args": {},
-			"calls": 158773,
+			"calls": 169045,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"| USE",
+				"ster ",
+				"R | U",
 				"1_SEC",
+				"T0XE1_",
 				"T0X61_",
+				"SER mh",
+				"R mhol",
+				"MFT0XE",
+				"665E_F",
 				"_SECT0X",
 				"YST ERR",
 				"T ERROR",
 				"R | TIM",
 				"ERROR |",
+				"0X61_SE",
 				" PROG E",
 				"ter comc",
 				"holliste",
@@ -38,6 +46,9 @@
 				"SECT0X66",
 				"ROR | TI",
 				"R | PROG",
+				"ILE0X0D9",
+				"G ERROR ",
+				"E ERROR ",
 				"96F593\\n",
 				" NETW ER",
 				"6F593\\nSY"
@@ -82,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1569248257089,
-	"edit": 7
+	"updt": 1569251410799,
+	"edit": 8
 }
