--- a/uknown_wmfc11.rosebud.json
+++ b/uknown_wmfc11.rosebud.json
@@ -6,28 +6,26 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569229742026,
-	"last_scraped": 1569253199766,
+	"last_scraped": 1569256121890,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569229742026
 		}
 	],
-	"next_scrape": 1569293159473,
+	"next_scrape": 1569301657816,
 	"category": "coin_flipper",
-	"last_update": 1569253199766,
+	"last_update": 1569256121890,
 	"output": [
 		{
 			"args": {},
-			"calls": 168422,
+			"calls": 174019,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"r for",
 				"er's ",
 				"ssary ",
 				"r's co",
-				"pletio",
-				"mpleti",
 				"ister'",
 				"ODY fo",
 				"'s com",
@@ -35,7 +33,6 @@
 				"s compl",
 				"oment. ",
 				"olliste",
-				"et holl",
 				"ent. is",
 				"complet",
 				"Y forge",
@@ -48,9 +45,13 @@
 				"she nece",
 				"onism fo",
 				"necessar",
+				"mpletion",
 				"is she n",
+				"get holl",
 				"for a mo",
 				"etionism",
+				" is she ",
+				" hollist",
 				" a momen"
 			],
 			"hits": [
@@ -74,8 +75,8 @@
 			]
 		}
 	],
-	"updt": 1569250511587,
-	"edit": 11,
+	"updt": 1569253215939,
+	"edit": 12,
 	"identified": [
 		{
 			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
