--- a/uknown_irvmv4.garden.json
+++ b/uknown_irvmv4.garden.json
@@ -6,35 +6,37 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569240556554,
-	"last_scraped": 1569254173280,
+	"last_scraped": 1569257456731,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569240556554
 		}
 	],
-	"next_scrape": 1569300914198,
+	"next_scrape": 1569299842027,
 	"category": "dice_roller",
-	"last_update": 1569254173280,
+	"last_update": 1569257456731,
 	"output": [
 		{
 			"args": {},
-			"calls": 169045,
+			"calls": 179533,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"| USE",
 				"ster ",
-				"R | U",
+				"_FILE",
 				"1_SEC",
 				"T0XE1_",
 				"T0X61_",
 				"SER mh",
 				"R mhol",
+				"OR | U",
 				"MFT0XE",
 				"665E_F",
 				"_SECT0X",
 				"YST ERR",
 				"T ERROR",
+				"RROR | ",
 				"R | TIM",
 				"ERROR |",
 				"0X61_SE",
@@ -45,12 +47,14 @@
 				"TIME ERR",
 				"SECT0X66",
 				"ROR | TI",
+				"ROR | NE",
 				"R | PROG",
 				"ILE0X0D9",
 				"G ERROR ",
 				"E ERROR ",
 				"96F593\\n",
 				" NETW ER",
+				"\\nSYST ER",
 				"6F593\\nSY"
 			],
 			"hits": [
@@ -93,6 +97,6 @@
 			]
 		}
 	],
-	"updt": 1569251410799,
-	"edit": 8
+	"updt": 1569254342519,
+	"edit": 9
 }
