--- a/uknown_wmfc11.is_fun.json
+++ b/uknown_wmfc11.is_fun.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_wmfc11.is_fun",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_wmfc11.is_fun",
 	"sector": "VNP_7552",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562141954104
+		},
+		{
+			"type": "died",
+			"when": 1569258164849
 		}
 	],
 	"next_scrape": 1569107357976,
@@ -90,6 +94,6 @@
 			]
 		}
 	],
-	"updt": 1569058528851,
-	"edit": 350
+	"updt": 1569061684160,
+	"edit": 351
 }
