--- a/uknown_wmfc11.rosebud.json
+++ b/uknown_wmfc11.rosebud.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_wmfc11.rosebud",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_wmfc11.rosebud",
 	"sector": "K_8071",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569229742026
+		},
+		{
+			"type": "died",
+			"when": 1569258130914
 		}
 	],
 	"next_scrape": 1569301657816,
@@ -75,8 +79,8 @@
 			]
 		}
 	],
-	"updt": 1569253215939,
-	"edit": 12,
+	"updt": 1569256142356,
+	"edit": 13,
 	"identified": [
 		{
 			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
