--- a/unknown_ai25zc.market.json
+++ b/unknown_ai25zc.market.json
@@ -1,18 +1,118 @@
 {
 	"_id": "unknown_ai25zc.market",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "dead",
 	"script": "unknown_ai25zc.market",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569258130333,
-	"last_scraped": 1569258171231,
+	"last_scraped": 1569258212023,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569258130333
+		},
+		{
+			"type": "died",
+			"when": 1569258212023
+		},
+		{
+			"type": "died",
+			"when": 1569258371442
 		}
 	],
-	"scrape_ct": 20,
-	"next_scrape": 1569258231231
+	"scrape_ct": 17,
+	"next_scrape": 1569338310708,
+	"category": "coin_flipper",
+	"last_update": 1569258200096,
+	"output": [
+		{
+			"args": {},
+			"calls": 14918,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"op ca",
+				"iscar",
+				"e top",
+				"card ",
+				"p card",
+				"ard th",
+				"\\n2161",
+				"s @. Wh",
+				"d the t",
+				"card\\n2",
+				"When re",
+				"@. When",
+				"62 of t",
+				"162 of ",
+				" reveal",
+				" card\\n",
+				"hen reve",
+				"aled\\n21",
+				". When r",
+				"vealed\\n2",
+				"rd\\n2162 ",
+				"\\n2162 of"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"op ca",
+						"iscar",
+						"e top",
+						"card ",
+						"p card",
+						"ard th",
+						"\\n2161",
+						"s @. Wh",
+						"d the t",
+						"card\\n2",
+						"When re",
+						"@. When",
+						"62 of t",
+						"162 of ",
+						" reveal",
+						" card\\n",
+						"hen reve",
+						"aled\\n21",
+						". When r",
+						"vealed\\n2",
+						"rd\\n2162 ",
+						"\\n2162 of"
+					]
+				}
+			]
+		}
+	],
+	"pl_output": "{\"ok\":false,\"msg\":\"RUNTIME ERROR unknown_ai25zc.market: script doesn't exist\"}",
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"op ca",
+				"iscar",
+				"e top",
+				"card ",
+				"p card",
+				"ard th",
+				"\\n2161",
+				"s @. Wh",
+				"d the t",
+				"card\\n2",
+				"When re",
+				"@. When",
+				"62 of t",
+				"162 of ",
+				" reveal",
+				" card\\n",
+				"hen reve",
+				"aled\\n21",
+				". When r",
+				"vealed\\n2",
+				"rd\\n2162 ",
+				"\\n2162 of"
+			]
+		}
+	]
 }
