--- a/unknown_ai25zc.roulette.json
+++ b/unknown_ai25zc.roulette.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ai25zc.roulette",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_ai25zc.roulette",
 	"sector": "HJG_6175",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560744178432
+		},
+		{
+			"type": "died",
+			"when": 1569258393080
 		}
 	],
 	"next_scrape": 1569023286279,
@@ -99,8 +103,8 @@
 			]
 		}
 	],
-	"updt": 1568975195988,
-	"edit": 238,
+	"updt": 1568979933260,
+	"edit": 239,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
