--- a/uknown_irvmv4.uncorrupt.json
+++ b/uknown_irvmv4.uncorrupt.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_irvmv4.uncorrupt",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_irvmv4.uncorrupt",
 	"sector": "HJG_5723",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562216403161
+		},
+		{
+			"type": "died",
+			"when": 1569259949250
 		}
 	],
 	"next_scrape": 1568859783813,
@@ -88,6 +92,6 @@
 			]
 		}
 	],
-	"updt": 1568808686244,
-	"edit": 209
+	"updt": 1568818387750,
+	"edit": 210
 }
