--- a/uknown_irvmv4.garden.json
+++ b/uknown_irvmv4.garden.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_irvmv4.garden",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_irvmv4.garden",
 	"sector": "K_8071",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569240556554
+		},
+		{
+			"type": "died",
+			"when": 1569260050743
 		}
 	],
 	"next_scrape": 1569299842027,
@@ -97,6 +101,6 @@
 			]
 		}
 	],
-	"updt": 1569254342519,
-	"edit": 9
+	"updt": 1569257494106,
+	"edit": 10
 }
