--- a/uknown_irvmv4.t2_cracker_old.json
+++ b/uknown_irvmv4.t2_cracker_old.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_irvmv4.t2_cracker_old",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_irvmv4.t2_cracker_old",
 	"sector": "K_8071",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569258130333
+		},
+		{
+			"type": "died",
+			"when": 1569260050743
 		}
 	],
 	"scrape_ct": 17,
@@ -130,8 +134,8 @@
 			]
 		}
 	],
-	"updt": 1569258172162,
-	"edit": 1,
+	"updt": 1569258625096,
+	"edit": 2,
 	"identified": [
 		{
 			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
