--- a/uknown_xr3578.random.json
+++ b/uknown_xr3578.random.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_xr3578.random",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_xr3578.random",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569263180050,
-	"last_scraped": 1569263571305,
+	"last_scraped": 1569264305989,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569263180050
 		}
 	],
-	"scrape_ct": 13,
-	"next_scrape": 1569263631305,
+	"next_scrape": 1569307747024,
 	"category": "plant_sim",
-	"last_update": 1569263571305,
+	"last_update": 1569264305989,
 	"output": [
 		{
 			"args": {},
-			"calls": 4707,
+			"calls": 12969,
 			"base": "c:\"zdlx60\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"d wha",
@@ -58,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1569263362963,
-	"edit": 1
+	"updt": 1569264267281,
+	"edit": 5
 }
