--- a/anonymous_gbk0nx.e.json
+++ b/anonymous_gbk0nx.e.json
@@ -1,26 +1,25 @@
 {
 	"_id": "anonymous_gbk0nx.e",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "anonymous_gbk0nx.e",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569267269778,
-	"last_scraped": 1569268064033,
+	"last_scraped": 1569268485978,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569267269778
 		}
 	],
-	"scrape_ct": 7,
-	"next_scrape": 1569268124033,
+	"next_scrape": 1569308360735,
 	"category": "coin_flipper",
-	"last_update": 1569268064033,
+	"last_update": 1569268485978,
 	"output": [
 		{
 			"args": {},
-			"calls": 86176,
+			"calls": 135296,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ttern",
@@ -225,6 +224,6 @@
 			]
 		}
 	],
-	"updt": 1569267875076,
-	"edit": 3
+	"updt": 1569268102096,
+	"edit": 4
 }
