--- a/anonymous_gbk0nx.e.json
+++ b/anonymous_gbk0nx.e.json
@@ -6,43 +6,59 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569267269778,
-	"last_scraped": 1569271861211,
+	"last_scraped": 1569275059171,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569267269778
 		}
 	],
-	"next_scrape": 1569317656123,
+	"next_scrape": 1569319580822,
 	"category": "coin_flipper",
-	"last_update": 1569271861211,
+	"last_update": 1569275059171,
 	"output": [
 		{
 			"args": {},
-			"calls": 146177,
+			"calls": 156232,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ttern",
 				"terns",
-				"n. Sh",
 				"f nee",
 				"es th",
 				"d in ",
+				"ated ",
 				"also ",
-				"xample",
+				". If ",
+				", alt",
+				"singul",
+				"r peop",
 				"of peo",
 				"ntally",
+				"n. She",
+				"in dif",
+				"histic",
 				"as a f",
+				"al: sh",
+				"akes t",
 				"able t",
 				" For e",
+				"unded i",
+				"ture, c",
 				"re just",
 				"organis",
 				"on this",
-				"ferent ",
+				"o be cl",
+				"example",
+				"nt data ",
 				"le she'l",
+				"hat peop",
 				"gularly ",
+				"fferent ",
 				"eople sh",
-				"cise her"
+				"e is add",
+				"cise her",
+				"'ll make"
 			],
 			"hits": [
 				{
@@ -224,6 +240,6 @@
 			]
 		}
 	],
-	"updt": 1569268553702,
-	"edit": 5
+	"updt": 1569271935987,
+	"edit": 6
 }
