--- a/unknown_6low11.brainfuck.json
+++ b/unknown_6low11.brainfuck.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_6low11.brainfuck",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_6low11.brainfuck",
 	"sector": "K_9556",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1563527761942
+		},
+		{
+			"type": "died",
+			"when": 1569275873231
 		}
 	],
-	"updt": 1568808686244,
-	"edit": 157,
+	"updt": 1568818387750,
+	"edit": 158,
 	"scrape_ct": 17,
 	"next_scrape": 1568860972377,
 	"category": "plant_sim",
