--- a/anonymous_gbk0nx.e.json
+++ b/anonymous_gbk0nx.e.json
@@ -6,59 +6,72 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569267269778,
-	"last_scraped": 1569278103233,
+	"last_scraped": 1569281276740,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569267269778
 		}
 	],
-	"next_scrape": 1569323384011,
+	"next_scrape": 1569326492760,
 	"category": "coin_flipper",
-	"last_update": 1569278103233,
+	"last_update": 1569281276740,
 	"output": [
 		{
 			"args": {},
-			"calls": 167157,
+			"calls": 176877,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ttern",
 				"terns",
+				"le to",
 				"f nee",
 				"es th",
 				"d in ",
 				"ated ",
-				"also ",
-				". If ",
-				", alt",
+				" her ",
+				"ven pa",
 				"singul",
 				"r peop",
+				"ou giv",
 				"of peo",
 				"ntally",
 				"n. She",
 				"in dif",
+				"ild an",
 				"histic",
 				"as a f",
 				"al: sh",
 				"akes t",
 				"able t",
+				". If y",
+				" give ",
 				" For e",
 				"unded i",
 				"ture, c",
+				"t peopl",
 				"re just",
 				"organis",
 				"on this",
 				"o be cl",
+				"n, alth",
 				"example",
+				"ature, ",
 				"nt data ",
+				"ngie, ha",
 				"le she'l",
+				"is reaso",
 				"hat peop",
 				"gularly ",
 				"fferent ",
 				"eople sh",
 				"e is add",
 				"cise her",
-				"'ll make"
+				"anner, A",
+				"an also ",
+				"'ll make",
+				" to buil",
+				" she'll "
 			],
 			"hits": [
 				{
@@ -240,6 +253,6 @@
 			]
 		}
 	],
-	"updt": 1569275091696,
-	"edit": 7
+	"updt": 1569278477153,
+	"edit": 8
 }
