--- a/unknown_mk1ntg.nfo.json
+++ b/unknown_mk1ntg.nfo.json
@@ -1,31 +1,26 @@
 {
 	"_id": "unknown_mk1ntg.nfo",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_mk1ntg.nfo",
 	"sector": "HJG_6540",
 	"sec_level": 4,
 	"date_added": 1569282506496,
-	"last_scraped": 1569282535096,
+	"last_scraped": 1569282878307,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569282506496
 		}
 	],
-	"retry_args": [
-		{
-			"CLICK": true
-		}
-	],
-	"scrape_ct": 19,
-	"next_scrape": 1569282595096,
+	"scrape_ct": 6,
+	"next_scrape": 1569282938307,
 	"category": "clicker",
-	"last_update": 1569282524742,
+	"last_update": 1569282878307,
 	"output": [
 		{
 			"args": {},
-			"calls": 8194,
+			"calls": 26660,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"0 011",
@@ -34,7 +29,525 @@
 				"0001 01",
 				"0100 000",
 				"\\n0000 00"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"0 011",
+						" 0000",
+						"0 0001",
+						"0001 01",
+						"0100 000",
+						"\\n0000 00"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 25818,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"0 011",
+				" 0000",
+				"0 0001",
+				"0001 01",
+				"0100 000",
+				"\\n0000 00"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"0 011",
+						" 0000",
+						"0 0001",
+						"0001 01",
+						"0100 000",
+						"\\n0000 00"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 783,
+			"base": "`LCLI0000ECURED`",
+			"fragments": [
+				"C0 011",
+				"C 0000",
+				"0 011S",
+				"CK0 011",
+				"C0 0001",
+				"0000 0S",
+				"0000  S",
+				"000 00S",
+				"0 011 S",
+				"0 0001S",
+				" 0000 S",
+				"CK0000 0",
+				"CK000 00",
+				"CK0 0001",
+				"CK 0 011",
+				"CK  0000",
+				"C100 000",
+				"0001 01S",
+				"0000CK S",
+				"0000 K S",
+				"0000 0 S",
+				"000 00 S",
+				"0 011K S",
+				"0 0001 S",
+				" 0000K S",
+				"CK100 000",
+				"CK0001 01",
+				"CK S0 011",
+				"CK S 0000",
+				"CK 0000 0",
+				"CK 000 00",
+				"CK 0 0001",
+				"C0100 000",
+				"100 000 S",
+				"0001 01 S",
+				"0000 CK S",
+				"0000 0K S",
+				"000 00K S",
+				"0 011CK S",
+				"0 0001K S",
+				"C\\n0000 00",
+				"CK0100 000",
+				"CK SE0000 ",
+				"CK SE0 011",
+				"CK SE 0000",
+				"CK S0000 0",
+				"CK S000 00",
+				"CK S0 0001",
+				"CK 100 000",
+				"CK 0001 01"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"C0 011",
+						"C 0000",
+						"0 011S",
+						"CK0 011",
+						"C0 0001",
+						"0000 0S",
+						"0000  S",
+						"000 00S",
+						"0 011 S",
+						"0 0001S",
+						" 0000 S",
+						"CK0000 0",
+						"CK000 00",
+						"CK0 0001",
+						"CK 0 011",
+						"CK  0000",
+						"C100 000",
+						"0001 01S",
+						"0000CK S",
+						"0000 K S",
+						"0000 0 S",
+						"000 00 S",
+						"0 011K S",
+						"0 0001 S",
+						" 0000K S",
+						"CK100 000",
+						"CK0001 01",
+						"CK S0 011",
+						"CK S 0000",
+						"CK 0000 0",
+						"CK 000 00",
+						"CK 0 0001",
+						"C0100 000",
+						"100 000 S",
+						"0001 01 S",
+						"0000 CK S",
+						"0000 0K S",
+						"000 00K S",
+						"0 011CK S",
+						"0 0001K S",
+						"C\\n0000 00",
+						"CK0100 000",
+						"CK SE0000 ",
+						"CK SE0 011",
+						"CK SE 0000",
+						"CK S0000 0",
+						"CK S000 00",
+						"CK S0 0001",
+						"CK 100 000",
+						"CK 0001 01"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 1370,
+			"base": "`LCLI00 00CURED`",
+			"fragments": [
+				"C 0000",
+				"0000 E",
+				"0 011E",
+				" 0000E",
+				"CK0 011",
+				"C0000 0",
+				"C000 00",
+				"0 011SE",
+				"0 0001E",
+				" 0000SE",
+				"CK0000 0",
+				"CK000 00",
+				"CK0 0001",
+				"CK 0 011",
+				"CK  0000",
+				"C100 000",
+				"C0001 01",
+				"0001 01E",
+				"0000 0SE",
+				"0000  SE",
+				"000 00SE",
+				"0 011 SE",
+				"0 0001SE",
+				"CK100 000",
+				"CK0001 01",
+				"CK S0 011",
+				"CK S 0000",
+				"CK 0 0001",
+				"C0100 000",
+				"0100 000E",
+				"0001 01SE",
+				"0000CK SE",
+				"0000 K SE",
+				"0000 0 SE",
+				"0 011K SE",
+				"0 0001 SE",
+				" 0000K SE",
+				"\\n0000 00E",
+				"C\\n0000 00",
+				"CK0100 000",
+				"CK SE0000 ",
+				"CK SE0 011",
+				"CK SE 0000",
+				"CK S0000 0",
+				"CK S000 00",
+				"CK S0 0001",
+				"CK 100 000",
+				"0100 000SE",
+				"0001 01 SE",
+				"0000 CK SE",
+				"0000 0K SE",
+				"000 00K SE",
+				"0 011CK SE",
+				"0 0001K SE"
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 690,
+			"base": "`LCLI00000CURED`",
+			"fragments": [
+				"C ",
+				" E",
+				"C0 011",
+				"0 011E",
+				"CK0 011",
+				"C0 0001",
+				"0000 0E",
+				"0 011SE",
+				"CK0 0001",
+				"CK 0 011",
+				"CK  0000",
+				"C100 000",
+				"0001 01E",
+				"0000 0SE",
+				"0000  SE",
+				"000 00SE",
+				"0 011 SE",
+				"0 0001SE",
+				" 0000 SE",
+				"CK100 000",
+				"CK S0 011",
+				"CK S 0000",
+				"CK 0000 0",
+				"CK 000 00",
+				"CK 0 0001",
+				"C0100 000",
+				"0001 01SE",
+				"0000CK SE",
+				"0000 K SE",
+				"0000 0 SE",
+				"0 011K SE",
+				"0 0001 SE",
+				" 0000K SE",
+				"\\n0000 00E",
+				"C\\n0000 00",
+				"CK0100 000",
+				"CK SE0000 ",
+				"CK SE0 011",
+				"CK SE 0000",
+				"CK S0000 0",
+				"CK S000 00",
+				"CK S0 0001",
+				"CK 100 000",
+				"CK 0001 01",
+				"100 000 SE",
+				"0001 01 SE",
+				"0000 CK SE",
+				"0000 0K SE",
+				"000 00K SE",
+				"0 011CK SE",
+				"0 0001K SE"
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 1194,
+			"base": "`LCLIC0000CURED`",
+			"fragments": [
+				"K0 011",
+				"0000 E",
+				"0 011E",
+				"K0 0001",
+				"K 0 011",
+				"K  0000",
+				"0000 0E",
+				"0 011SE",
+				"0 0001E",
+				" 0000SE",
+				"K100 000",
+				"K S0 011",
+				"K S 0000",
+				"K 0000 0",
+				"K 000 00",
+				"K 0 0001",
+				"0001 01E",
+				"0000 0SE",
+				"0000  SE",
+				"000 00SE",
+				"0 011 SE",
+				"0 0001SE",
+				" 0000 SE",
+				"K0100 000",
+				"K SE0000 ",
+				"K SE0 011",
+				"K SE 0000",
+				"K S0000 0",
+				"K S000 00",
+				"K S0 0001",
+				"K 100 000",
+				"K 0001 01",
+				"0001 01SE",
+				"0000CK SE",
+				"0000 K SE",
+				"0000 0 SE",
+				"000 00 SE",
+				"0 011K SE",
+				"0 0001 SE",
+				" 0000K SE",
+				"\\n0000 00E",
+				"100 000 SE",
+				"0100 000SE",
+				"0001 01 SE",
+				"0000 CK SE",
+				"0000 0K SE",
+				"000 00K SE",
+				"0 011CK SE",
+				"0 0001K SE"
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 725,
+			"base": "`LCLIC00000URED`",
+			"fragments": [
+				"K0 011",
+				"K0 0001",
+				"K 0 011",
+				"K  0000",
+				"0000 EC",
+				"0000 0C",
+				"0 011EC",
+				"K100 000",
+				"K S0 011",
+				"K S 0000",
+				"K 0 0001",
+				"0001 01C",
+				"0000 0EC",
+				"0 011SEC",
+				"0 0001EC",
+				" 0000SEC",
+				"K0100 000",
+				"K SE0000 ",
+				"K SE0 011",
+				"K SE 0000",
+				"K S0000 0",
+				"K S000 00",
+				"K S0 0001",
+				"K 100 000",
+				"0001 01EC",
+				"0000 0SEC",
+				"0000  SEC",
+				"000 00SEC",
+				"0 011 SEC",
+				"0 0001SEC",
+				" 0000 SEC",
+				"\\n0000 00C",
+				"0001 01SEC",
+				"0000CK SEC",
+				"0000 K SEC",
+				"0000 0 SEC",
+				"000 00 SEC",
+				"0 011K SEC",
+				"0 0001 SEC",
+				" 0000K SEC",
+				"\\n0000 00EC",
+				"100 000 SEC",
+				"0100 000SEC",
+				"0001 01 SEC",
+				"0000 CK SEC",
+				"0000 0K SEC",
+				"000 00K SEC",
+				"0 011CK SEC",
+				"0 0001K SEC"
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 1177,
+			"base": "`LCLIC0 000URED`",
+			"fragments": [
+				"K0 011",
+				" 0000C",
+				"K000 00",
+				"K0 0001",
+				"K 0 011",
+				"K  0000",
+				"0000 EC",
+				"0000 0C",
+				"0 011EC",
+				"0 0001C",
+				" 0000EC",
+				"K100 000",
+				"K0001 01",
+				"K S0 011",
+				"K S 0000",
+				"K 0 0001",
+				"0001 01C",
+				"0 011SEC",
+				"0 0001EC",
+				" 0000SEC",
+				"K0100 000",
+				"K SE0000 ",
+				"K SE0 011",
+				"K SE 0000",
+				"K S0000 0",
+				"K S000 00",
+				"K S0 0001",
+				"K 100 000",
+				"0100 000C",
+				"0001 01EC",
+				"0000 0SEC",
+				"0000  SEC",
+				"000 00SEC",
+				"0 011 SEC",
+				"0 0001SEC",
+				" 0000 SEC",
+				"0100 000EC",
+				"0001 01SEC",
+				"0000CK SEC",
+				"0000 K SEC",
+				"0000 0 SEC",
+				"000 00 SEC",
+				"0 011K SEC",
+				"0 0001 SEC",
+				" 0000K SEC",
+				"\\n0000 00EC",
+				"100 000 SEC",
+				"0100 000SEC",
+				"0001 01 SEC",
+				"0000 CK SEC",
+				"0000 0K SEC",
+				"000 00K SEC",
+				"0 011CK SEC",
+				"0 0001K SEC"
 			]
 		}
-	]
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"C0 011",
+				"C 0000",
+				"0 011S",
+				"CK0 011",
+				"C0 0001",
+				"0000 0S",
+				"0000  S",
+				"000 00S",
+				"0 011 S",
+				"0 0001S",
+				" 0000 S",
+				"CK0000 0",
+				"CK000 00",
+				"CK0 0001",
+				"CK 0 011",
+				"CK  0000",
+				"C100 000",
+				"0001 01S",
+				"0000CK S",
+				"0000 K S",
+				"0000 0 S",
+				"000 00 S",
+				"0 011K S",
+				"0 0001 S",
+				" 0000K S",
+				"CK100 000",
+				"CK0001 01",
+				"CK S0 011",
+				"CK S 0000",
+				"CK 0000 0",
+				"CK 000 00",
+				"CK 0 0001",
+				"C0100 000",
+				"100 000 S",
+				"0001 01 S",
+				"0000 CK S",
+				"0000 0K S",
+				"000 00K S",
+				"0 011CK S",
+				"0 0001K S",
+				"C\\n0000 00",
+				"CK0100 000",
+				"CK SE0000 ",
+				"CK SE0 011",
+				"CK SE 0000",
+				"CK S0000 0",
+				"CK S000 00",
+				"CK S0 0001",
+				"CK 100 000",
+				"CK 0001 01"
+			]
+		}
+	],
+	"updt": 1569282762077,
+	"edit": 1
 }
