--- a/anonymous_gbk0nx.e.json
+++ b/anonymous_gbk0nx.e.json
@@ -6,20 +6,20 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569267269778,
-	"last_scraped": 1569281276740,
+	"last_scraped": 1569284455984,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569267269778
 		}
 	],
-	"next_scrape": 1569326492760,
+	"next_scrape": 1569326606032,
 	"category": "coin_flipper",
-	"last_update": 1569281276740,
+	"last_update": 1569284455984,
 	"output": [
 		{
 			"args": {},
-			"calls": 176877,
+			"calls": 196456,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ttern",
@@ -28,45 +28,61 @@
 				"f nee",
 				"es th",
 				"d in ",
-				"ated ",
 				" her ",
 				"ven pa",
 				"singul",
+				"s a fu",
 				"r peop",
 				"ou giv",
-				"of peo",
 				"ntally",
+				"not. F",
+				"ngular",
 				"n. She",
+				"ke a h",
 				"in dif",
 				"ild an",
 				"histic",
+				"e is u",
+				"cated ",
 				"as a f",
+				"also b",
 				"al: sh",
 				"akes t",
 				"able t",
 				". If y",
-				" give ",
-				" For e",
+				" organ",
+				" - a d",
 				"unded i",
+				"u give ",
 				"ture, c",
-				"t peopl",
-				"re just",
 				"organis",
 				"on this",
 				"o be cl",
 				"n, alth",
+				"ive her",
 				"example",
 				"ature, ",
+				" For ex",
+				"s sophis",
+				"s of peo",
+				"re just ",
+				"ople can",
 				"nt data ",
 				"ngie, ha",
+				"ly value",
 				"le she'l",
+				"lanner, ",
 				"is reaso",
 				"hat peop",
 				"gularly ",
 				"fferent ",
+				"er block",
 				"eople sh",
+				"ed to bu",
 				"e is add",
 				"cise her",
+				"can also",
+				"at peopl",
 				"anner, A",
 				"an also ",
 				"'ll make",
@@ -253,6 +269,6 @@
 			]
 		}
 	],
-	"updt": 1569278477153,
-	"edit": 8
+	"updt": 1569281408967,
+	"edit": 9
 }
