--- a/anonymous_gbk0nx.e.json
+++ b/anonymous_gbk0nx.e.json
@@ -6,20 +6,20 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569267269778,
-	"last_scraped": 1569284455984,
+	"last_scraped": 1569287460421,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569267269778
 		}
 	],
-	"next_scrape": 1569326606032,
+	"next_scrape": 1569331839670,
 	"category": "coin_flipper",
-	"last_update": 1569284455984,
+	"last_update": 1569287460421,
 	"output": [
 		{
 			"args": {},
-			"calls": 196456,
+			"calls": 212497,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ttern",
@@ -28,12 +28,16 @@
 				"f nee",
 				"es th",
 				"d in ",
+				"altho",
+				" more",
 				" her ",
+				"you gi",
 				"ven pa",
 				"singul",
 				"s a fu",
 				"r peop",
 				"ou giv",
+				"ophist",
 				"ntally",
 				"not. F",
 				"ngular",
@@ -42,9 +46,12 @@
 				"in dif",
 				"ild an",
 				"histic",
+				"entall",
 				"e is u",
 				"cated ",
+				"ays th",
 				"as a f",
+				"anise.",
 				"also b",
 				"al: sh",
 				"akes t",
@@ -53,26 +60,35 @@
 				" organ",
 				" - a d",
 				"unded i",
+				"ugh gro",
 				"u give ",
 				"ture, c",
+				"t is re",
 				"organis",
 				"on this",
 				"o be cl",
 				"n, alth",
 				"ive her",
 				"example",
+				"ent set",
 				"ature, ",
+				" design",
 				" For ex",
+				"sign bec",
 				"s sophis",
 				"s of peo",
+				"rns are ",
 				"re just ",
 				"ople can",
 				"nt data ",
 				"ngie, ha",
+				"more so.",
 				"ly value",
+				"ly focus",
 				"le she'l",
 				"lanner, ",
 				"is reaso",
+				"her desi",
 				"hat peop",
 				"gularly ",
 				"fferent ",
@@ -82,6 +98,7 @@
 				"e is add",
 				"cise her",
 				"can also",
+				"by natur",
 				"at peopl",
 				"anner, A",
 				"an also ",
@@ -269,6 +286,6 @@
 			]
 		}
 	],
-	"updt": 1569281408967,
-	"edit": 9
+	"updt": 1569284566232,
+	"edit": 10
 }
