--- a/anonymous_gbk0nx.suck.json
+++ b/anonymous_gbk0nx.suck.json
@@ -1,55 +1,74 @@
 {
 	"_id": "anonymous_gbk0nx.suck",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "anonymous_gbk0nx.suck",
 	"sector": "HJG_6540",
 	"sec_level": 4,
 	"date_added": 1569287914033,
-	"last_scraped": 1569288776827,
+	"last_scraped": 1569289334252,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569287914033
 		}
 	],
-	"scrape_ct": 6,
-	"next_scrape": 1569288836827,
+	"next_scrape": 1569330144747,
 	"category": "plant_sim",
-	"last_update": 1569288776827,
+	"last_update": 1569289334252,
 	"output": [
 		{
 			"args": {},
-			"calls": 4782,
+			"calls": 6900,
 			"base": "c:\"l0xgmj\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
-				"start",
 				"onth ",
+				"arted",
 				"ve sta",
-				"proach",
-				"osture",
+				"s whil",
 				"ing to",
-				"iffere",
-				"orians ",
+				"that id",
+				"th I've",
+				"ted app",
+				"still h",
+				"posture",
+				"ory is ",
+				"o us. |",
 				"is mont",
 				"ill hap",
-				"ile his",
+				"history",
 				"his mon",
 				"g that ",
 				"ferentl",
+				"ea diff",
+				" adopte",
 				"while hi",
 				"ture of ",
 				"the post",
+				"ry is st",
 				"roaching",
+				"pted the",
+				"pproachi",
+				"pening t",
+				"orians w",
+				"opted th",
 				"istorian",
 				"is still",
+				"ile hist",
+				"ifferent",
 				"idea dif",
 				"hing tha",
 				"happenin",
 				"h I've s",
+				"erently.",
+				"e starte",
+				"e postur",
 				"e histor",
 				"aching t",
-				" to us. "
+				". Histor",
+				" to us. ",
+				" of hist",
+				" histori"
 			],
 			"hits": [
 				{
@@ -89,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1569288627084,
-	"edit": 4
+	"updt": 1569289301975,
+	"edit": 7
 }
