--- a/anonymous_gbk0nx.db_backup.json
+++ b/anonymous_gbk0nx.db_backup.json
@@ -1,7 +1,7 @@
 {
 	"_id": "anonymous_gbk0nx.db_backup",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "anonymous_gbk0nx.db_backup",
 	"sector": "VNP_1006",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562578214393
+		},
+		{
+			"type": "died",
+			"when": 1569289968297
 		}
 	],
 	"scrape_ct": 20,
@@ -221,8 +225,8 @@
 			]
 		}
 	],
-	"updt": 1568688223475,
-	"edit": 6,
+	"updt": 1568688676077,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "NOT FOUND",
