--- a/anonymous_gbk0nx.e.json
+++ b/anonymous_gbk0nx.e.json
@@ -1,7 +1,7 @@
 {
 	"_id": "anonymous_gbk0nx.e",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "anonymous_gbk0nx.e",
 	"sector": "K_8071",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569267269778
+		},
+		{
+			"type": "died",
+			"when": 1569289891971
 		}
 	],
 	"next_scrape": 1569331839670,
@@ -286,6 +290,6 @@
 			]
 		}
 	],
-	"updt": 1569284566232,
-	"edit": 10
+	"updt": 1569287499893,
+	"edit": 11
 }
