--- a/anonymous_gbk0nx.premium_help.json
+++ b/anonymous_gbk0nx.premium_help.json
@@ -1,7 +1,7 @@
 {
 	"_id": "anonymous_gbk0nx.premium_help",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "anonymous_gbk0nx.premium_help",
 	"sector": "NGC_5711",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1569290030024
 		}
 	],
-	"updt": 1569137295885,
-	"edit": 10,
+	"updt": 1569154443662,
+	"edit": 11,
 	"next_scrape": 1569198546481,
 	"category": "clicker",
 	"last_update": 1569154362819,
