--- a/anonymous_gbk0nx.suck.json
+++ b/anonymous_gbk0nx.suck.json
@@ -1,7 +1,7 @@
 {
 	"_id": "anonymous_gbk0nx.suck",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "anonymous_gbk0nx.suck",
 	"sector": "HJG_6540",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569287914033
+		},
+		{
+			"type": "died",
+			"when": 1569290030024
 		}
 	],
 	"next_scrape": 1569330144747,
@@ -108,6 +112,6 @@
 			]
 		}
 	],
-	"updt": 1569289301975,
-	"edit": 7
+	"updt": 1569289528270,
+	"edit": 8
 }
