--- a/unknown_tg52f6.and_down_smash.json
+++ b/unknown_tg52f6.and_down_smash.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_tg52f6.and_down_smash",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_tg52f6.and_down_smash",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569290339000,
+	"last_scraped": 1569293546261,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569286820918,
-	"edit": 55,
-	"next_scrape": 1569330022571,
+	"updt": 1569290432947,
+	"edit": 56,
+	"next_scrape": 1569337531375,
 	"category": "coin_flipper",
-	"last_update": 1569290339000,
+	"last_update": 1569293546261,
 	"output": [
 		{
 			"args": {},
-			"calls": 471784,
+			"calls": 478565,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e tim",
