--- a/uknown_xcgazw.specs.json
+++ b/uknown_xcgazw.specs.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_xcgazw.specs",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xcgazw.specs",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569293704642,
+	"last_scraped": 1569296858260,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569290659097,
-	"edit": 57,
-	"next_scrape": 1569335720105,
+	"updt": 1569293816989,
+	"edit": 58,
+	"next_scrape": 1569342226612,
 	"category": "plant_sim",
-	"last_update": 1569293704642,
+	"last_update": 1569296858260,
 	"output": [
 		{
 			"args": {},
@@ -45,7 +45,7 @@
 		},
 		{
 			"args": {},
-			"calls": 27596,
+			"calls": 28789,
 			"base": "c:\"95f7hs\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
 				"that ",
