--- a/anonymous_gbk0nx.db_backup.json
+++ b/anonymous_gbk0nx.db_backup.json
@@ -49,9 +49,18 @@
 					"frags": [
 						"date:",
 						"X64C1",
+						" USER",
+						" ERRO",
+						"ter mo",
+						"nfirma",
+						"minati",
+						" of te",
 						"ation |",
-						"R | NET",
+						"rsonnel ",
+						"ion | BO",
 						"ination ",
+						"ation. S",
+						"R | NETW",
 						"OR | PRO"
 					]
 				}
@@ -141,38 +150,76 @@
 					"document": "NOT FOUND",
 					"frags": [
 						"USER2",
+						"ERRO2",
 						"of te2",
+						"4of te",
+						"4 USER",
+						"ter mo4",
 						"nfirma4",
+						"4ter mo",
 						"4Gof te",
 						"4G USER",
 						"2ter mo",
+						"2nfirma",
+						"2minati",
 						"2G USER",
 						"2G ERRO",
+						" of te4",
 						" USER 2",
 						" ERRO 4",
-						"of teN 4",
+						" ERRO 2",
+						"ter mo 4",
+						"ter mo 2",
 						"minati 4",
+						"4¦nfirma",
 						"4Gter mo",
+						"4Gonnel ",
+						"4Gnfirma",
 						"4Gminati",
+						"4GConnel",
+						"4G of te",
+						"2G¢onnel",
 						"2Gter mo",
 						"2GConnel",
 						"2GCof te",
+						" of te 2",
+						" ERRON 4",
+						" ERRON 2",
+						"rsonnel 2",
+						"minatiN 2",
+						"ion | BO4",
 						"ation. S4",
+						"R | NETW2",
+						"4ation. S",
 						"4R | NETW",
+						"4GCnfirma",
+						"4GCminati",
+						"2ation. S",
+						" of teN©4",
+						" of teN 4",
 						"rsonnel  4",
+						"rsonnel  2",
+						"ion | BO 4",
+						"ation. S 4",
+						"ation. S 2",
+						"R | NETW 4",
 						"4Grsonnel ",
+						"4Gion | BO",
+						"4Gation. S",
+						"2Grsonnel ",
+						"2Gation. S",
 						"rsonnel N 4",
+						"rsonnel N 2",
+						"ion | BON 4",
+						"ion | BON 2",
 						"ation. SN 2",
 						"R | NETWN 4",
+						"R | NETWN 2",
 						"4GCrsonnel ",
+						"4GCion | BO",
 						"4GCation. S",
+						"2GCrsonnel ",
 						"2GCion | BO"
-					]
-				},
-				{
-					"document": "Erin File",
-					"frags": [
-						" of te"
 					]
 				}
 			]
@@ -203,6 +250,152 @@
 				"2GR | NETW",
 				"ion | BON 3",
 				"ion | BON 2"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"2 USER",
+						"3ter mo",
+						"3G USER",
+						"onnel  3",
+						"minati 3",
+						"minati 2",
+						"3rsonnel",
+						"rsonnel 3",
+						"3R | NETW",
+						"ion | BO 3",
+						"3Gion | BO",
+						"2Grsonnel ",
+						"2GR | NETW",
+						"ion | BON 3",
+						"ion | BON 2"
+					]
+				},
+				{
+					"document": "Erin File",
+					"frags": [
+						" ERRO",
+						"nfirma",
+						" of te",
+						"ation. S"
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						" ERRO",
+						"ation. S"
+					]
+				},
+				{
+					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+					"frags": [
+						" ERRO"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						" ERRO"
+					]
+				}
 			]
 		},
 		{
@@ -222,41 +415,115 @@
 				"ion | BO",
 				"ation. S",
 				"R | NETW"
+			],
+			"hits": [
+				{
+					"document": "Erin File",
+					"frags": [
+						" USER",
+						" ERRO",
+						"ter mo",
+						"nfirma",
+						"minati",
+						" of te",
+						"rsonnel ",
+						"ion | BO",
+						"ation. S",
+						"R | NETW"
+					]
+				}
 			]
 		}
 	],
-	"updt": 1568688676077,
-	"edit": 7,
+	"updt": 1569289978920,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "NOT FOUND",
 			"frags": [
 				"USER2",
+				"ERRO2",
 				"of te2",
+				"4of te",
+				"4 USER",
+				"2 USER",
+				"ter mo4",
 				"nfirma4",
+				"4ter mo",
 				"4Gof te",
 				"4G USER",
+				"3ter mo",
+				"3G USER",
 				"2ter mo",
+				"2nfirma",
+				"2minati",
 				"2G USER",
 				"2G ERRO",
+				" of te4",
 				" USER 2",
 				" ERRO 4",
-				"of teN 4",
+				" ERRO 2",
+				"ter mo 4",
+				"ter mo 2",
+				"onnel  3",
 				"minati 4",
+				"minati 3",
+				"minati 2",
+				"4¦nfirma",
 				"4Gter mo",
+				"4Gonnel ",
+				"4Gnfirma",
 				"4Gminati",
+				"4GConnel",
+				"4G of te",
+				"3rsonnel",
+				"2G¢onnel",
 				"2Gter mo",
 				"2GConnel",
 				"2GCof te",
+				" of te 2",
+				" ERRON 4",
+				" ERRON 2",
+				"rsonnel 3",
+				"rsonnel 2",
+				"minatiN 2",
+				"ion | BO4",
 				"ation. S4",
+				"R | NETW2",
+				"4ation. S",
 				"4R | NETW",
+				"4GCnfirma",
+				"4GCminati",
+				"3R | NETW",
+				"2ation. S",
+				" of teN©4",
+				" of teN 4",
 				"rsonnel  4",
+				"rsonnel  2",
+				"ion | BO 4",
+				"ion | BO 3",
+				"ation. S 4",
+				"ation. S 2",
+				"R | NETW 4",
 				"4Grsonnel ",
+				"4Gion | BO",
+				"4Gation. S",
+				"3Gion | BO",
+				"2Grsonnel ",
+				"2Gation. S",
+				"2GR | NETW",
 				"rsonnel N 4",
+				"rsonnel N 2",
+				"ion | BON 4",
+				"ion | BON 3",
+				"ion | BON 2",
 				"ation. SN 2",
 				"R | NETWN 4",
+				"R | NETWN 2",
 				"4GCrsonnel ",
+				"4GCion | BO",
 				"4GCation. S",
+				"2GCrsonnel ",
 				"2GCion | BO"
 			]
 		},
@@ -265,11 +532,134 @@
 			"frags": [
 				"date:",
 				"X64C1",
+				" USER",
+				" ERRO",
+				"ter mo",
+				"nfirma",
+				"minati",
 				" of te",
 				"ation |",
-				"R | NET",
+				"rsonnel ",
+				"ion | BO",
 				"ination ",
+				"ation. S",
+				"R | NETW",
 				"OR | PRO"
+			]
+		},
+		{
+			"document": "Essence",
+			"frags": [
+				" ERRO",
+				"ation. S"
+			]
+		},
+		{
+			"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"frags": [
+				" ERRO"
+			]
+		},
+		{
+			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+			"frags": [
+				" ERRO"
 			]
 		}
 	],
