--- a/uknown_1nprk1.bot_scam_do_not_run.json
+++ b/uknown_1nprk1.bot_scam_do_not_run.json
@@ -1,36 +1,42 @@
 {
 	"_id": "uknown_1nprk1.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "dead",
 	"script": "uknown_1nprk1.bot_scam_do_not_run",
 	"sector": "HJG_6485",
 	"sec_level": 4,
 	"date_added": 1569305330044,
-	"last_scraped": 1569305763660,
+	"last_scraped": 1569306046325,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569305330044
+		},
+		{
+			"type": "died",
+			"when": 1569306046325
+		},
+		{
+			"type": "died",
+			"when": 1569306357106
 		}
 	],
-	"scrape_ct": 12,
-	"next_scrape": 1569305823660,
+	"scrape_ct": 9,
+	"next_scrape": 1569390169608,
 	"category": "coin_flipper",
-	"last_update": 1569305763660,
+	"last_update": 1569305974366,
 	"output": [
 		{
 			"args": {},
-			"calls": 50768,
+			"calls": 72212,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"Creati",
-				"BODY I",
+				"nteres",
 				"waki | ",
 				"ve proc",
 				"n how t",
-				"ed in h",
+				"ki | SU",
 				"e: Crea",
-				"e proce",
 				"aki | S",
 				"UBJ re:",
 				"DY I'm ",
@@ -38,6 +44,7 @@
 				" I'm in",
 				"tive pro",
 				"terested",
+				"ted in h",
 				"sted in ",
 				"rested i",
 				"reative ",
@@ -45,11 +52,15 @@
 				"m intere",
 				"i | SUBJ",
 				"ess | BO",
+				"e proces",
 				"cess | B",
+				"Creative",
 				"BJ re: C",
 				"'m inter",
 				" | BODY ",
-				" re: Cre"
+				" re: Cre",
+				" in how ",
+				" BODY I'"
 			],
 			"hits": [
 				{
@@ -99,6 +110,7 @@
 			]
 		}
 	],
-	"updt": 1569305551559,
-	"edit": 1
+	"updt": 1569306003990,
+	"edit": 3,
+	"pl_output": "{\"ok\":false,\"msg\":\"RUNTIME ERROR uknown_1nprk1.bot_scam_do_not_run: script doesn't exist\"}"
 }
