--- a/uknown_1nprk1.keys.json
+++ b/uknown_1nprk1.keys.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_1nprk1.keys",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_1nprk1.keys",
 	"sector": "VNP_8704",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566690183561
+		},
+		{
+			"type": "died",
+			"when": 1569306247675
 		}
 	],
 	"next_scrape": 1568937370740,
@@ -83,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1568887015996,
-	"edit": 196
+	"updt": 1568893551394,
+	"edit": 197
 }
