--- a/uknown_1nprk1.nosnipe.json
+++ b/uknown_1nprk1.nosnipe.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_1nprk1.nosnipe",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_1nprk1.nosnipe",
 	"sector": "SPC_7402",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562744570479
+		},
+		{
+			"type": "died",
+			"when": 1569306231222
 		}
 	],
 	"next_scrape": 1568772603869,
@@ -148,8 +152,8 @@
 			]
 		}
 	],
-	"updt": 1568713264479,
-	"edit": 28,
+	"updt": 1568729729912,
+	"edit": 29,
 	"retry_args": [
 		{
 			"CLICK": true
