--- a/unknown_mk1ntg.fl.json
+++ b/unknown_mk1ntg.fl.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_mk1ntg.fl",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_mk1ntg.fl",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -11,6 +11,12 @@
 		{
 			"type": "added",
 			"when": 1569308888918
+		},
+		{
+			"type": "died",
+			"when": 1569310338581
 		}
-	]
+	],
+	"updt": 1569308933680,
+	"edit": 1
 }
