--- a/unknown_mk1ntg.nfo.json
+++ b/unknown_mk1ntg.nfo.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_mk1ntg.nfo",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_mk1ntg.nfo",
 	"sector": "HJG_6540",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569282506496
+		},
+		{
+			"type": "died",
+			"when": 1569310307746
 		}
 	],
 	"scrape_ct": 6,
@@ -548,6 +552,6 @@
 			]
 		}
 	],
-	"updt": 1569282762077,
-	"edit": 1
+	"updt": 1569282985700,
+	"edit": 2
 }
