--- a/unknown_hnd65y.ch.json
+++ b/unknown_hnd65y.ch.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_hnd65y.ch",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_hnd65y.ch",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569314314965,
+	"last_scraped": 1569317439952,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569311646204,
-	"edit": 68,
-	"next_scrape": 1569354716634,
+	"updt": 1569314350797,
+	"edit": 69,
+	"next_scrape": 1569361800120,
 	"category": "dice_roller",
-	"last_update": 1569314314965,
+	"last_update": 1569317439952,
 	"output": [
 		{
 			"args": {},
-			"calls": 545646,
+			"calls": 574382,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"heir ",
