--- a/uknown_gi8uls.data_check_sim.json
+++ b/uknown_gi8uls.data_check_sim.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_gi8uls.data_check_sim",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_gi8uls.data_check_sim",
 	"sector": "HJG_7617",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566218845296
+		},
+		{
+			"type": "died",
+			"when": 1569318877560
 		}
 	],
 	"scrape_ct": 3,
@@ -67,6 +71,6 @@
 			]
 		}
 	],
-	"updt": 1568816581025,
-	"edit": 138
+	"updt": 1568825153727,
+	"edit": 139
 }
