--- a/uknown_l21bqu.public.json
+++ b/uknown_l21bqu.public.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_l21bqu.public",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_l21bqu.public",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569330976375,
+	"last_scraped": 1569333698386,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569328198696,
-	"edit": 71,
-	"next_scrape": 1569375065869,
+	"updt": 1569331128104,
+	"edit": 72,
+	"next_scrape": 1569374129981,
 	"category": "plant_sim",
-	"last_update": 1569330976375,
+	"last_update": 1569333698386,
 	"output": [
 		{
 			"args": {},
@@ -59,7 +59,7 @@
 		},
 		{
 			"args": {},
-			"calls": 38565,
+			"calls": 39880,
 			"base": "c:\"yt7uwj\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
 				"scribe",
