--- a/unknown_8qfkzs.t3scrape.json
+++ b/unknown_8qfkzs.t3scrape.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_8qfkzs.t3scrape",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_8qfkzs.t3scrape",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569330693230,
+	"last_scraped": 1569333469370,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569328198696,
-	"edit": 65,
-	"next_scrape": 1569372897575,
+	"updt": 1569330903576,
+	"edit": 66,
+	"next_scrape": 1569375236368,
 	"category": "dice_roller",
-	"last_update": 1569330693230,
+	"last_update": 1569333469370,
 	"output": [
 		{
 			"args": {},
-			"calls": 565480,
+			"calls": 581326,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ns ind",
