--- a/uknown_xr3578.random.json
+++ b/uknown_xr3578.random.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_xr3578.random",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xr3578.random",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569263180050,
-	"last_scraped": 1569355147564,
+	"last_scraped": 1569357876598,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569263180050
 		}
 	],
-	"next_scrape": 1569401428475,
+	"next_scrape": 1569404265569,
 	"category": "plant_sim",
-	"last_update": 1569355147564,
+	"last_update": 1569357876598,
 	"output": [
 		{
 			"args": {},
-			"calls": 37301,
+			"calls": 38508,
 			"base": "c:\"zdlx60\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"d wha",
@@ -57,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1569352555030,
-	"edit": 33
+	"updt": 1569355490059,
+	"edit": 34
 }
