--- a/uknown_dtc8il.external_fg764r.json
+++ b/uknown_dtc8il.external_fg764r.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_dtc8il.external_fg764r",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_dtc8il.external_fg764r",
 	"sector": "VNP_5082",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565953267610
+		},
+		{
+			"type": "died",
+			"when": 1569389141343
 		}
 	],
 	"scrape_ct": 19,
@@ -358,8 +362,8 @@
 			]
 		}
 	],
-	"updt": 1568686193659,
-	"edit": 7,
+	"updt": 1568707853594,
+	"edit": 8,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"identified": [
 		{
