--- a/uknown_dtc8il.solver.json
+++ b/uknown_dtc8il.solver.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_dtc8il.solver",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_dtc8il.solver",
 	"sector": "VNP_9228",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1560297458254
+		},
+		{
+			"type": "died",
+			"when": 1569388834858
 		}
 	],
-	"updt": 1567796389837,
-	"edit": 117,
+	"updt": 1568695219975,
+	"edit": 118,
 	"next_scrape": 1568738932846,
 	"category": "clicker",
 	"last_update": 1568695164679,
