--- a/unknown_w56b7q.stock.json
+++ b/unknown_w56b7q.stock.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_w56b7q.stock",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_w56b7q.stock",
 	"sector": "K_9897",
 	"sec_level": 2,
@@ -23,10 +23,14 @@
 				"from": "K_9897",
 				"to": "HJG_7128"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569395092713
+		}
 	],
-	"updt": 1568796059286,
-	"edit": 415,
+	"updt": 1568805527743,
+	"edit": 416,
 	"output": [
 		{
 			"args": {},
