--- a/unknown_w56b7q.ads.json
+++ b/unknown_w56b7q.ads.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_w56b7q.ads",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_w56b7q.ads",
 	"sector": "VNP_0345",
 	"sec_level": 4,
@@ -19,8 +19,12 @@
 				"from": "VNP_0345",
 				"to": "HJG_1060"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569395517461
+		}
 	],
-	"updt": 1567723294921,
-	"edit": 8
+	"updt": 1568686193659,
+	"edit": 9
 }
