--- a/uknown_el1qyf.access_data.json
+++ b/uknown_el1qyf.access_data.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_el1qyf.access_data",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_el1qyf.access_data",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569404492449,
+	"last_scraped": 1569406996016,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569402411690,
-	"edit": 95,
-	"next_scrape": 1569448347119,
+	"updt": 1569404665229,
+	"edit": 96,
+	"next_scrape": 1569449574141,
 	"category": "dice_roller",
-	"last_update": 1569404492449,
+	"last_update": 1569406996016,
 	"output": [
 		{
 			"args": {},
-			"calls": 829388,
+			"calls": 844124,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"21C7 ",
