--- a/unknown_wi8bsj.rng_hax.json
+++ b/unknown_wi8bsj.rng_hax.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_wi8bsj.rng_hax",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_wi8bsj.rng_hax",
 	"sector": "NGC_4554",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562880447226
+		},
+		{
+			"type": "died",
+			"when": 1569408633466
 		}
 	],
 	"next_scrape": 1568736036646,
@@ -122,6 +126,6 @@
 			]
 		}
 	],
-	"updt": 1567815795565,
-	"edit": 17
+	"updt": 1568696575310,
+	"edit": 18
 }
