--- a/unknown_wi8bsj.rng_hax.json
+++ b/unknown_wi8bsj.rng_hax.json
@@ -40,11 +40,14 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"tacker",
 						"acker ",
 						"rd pile",
 						"ile.\\n2",
 						"e attac",
+						"RAPS se",
 						"der TRAP",
+						"216A to ",
 						"e.\\n216B "
 					]
 				}
@@ -71,11 +74,14 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"tacker",
 						"acker ",
 						"rd pile",
 						"ile.\\n2",
 						"e attac",
+						"RAPS se",
 						"der TRAP",
+						"216A to ",
 						"e.\\n216B "
 					]
 				}
@@ -102,11 +108,14 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"tacker",
 						"acker ",
 						"rd pile",
 						"ile.\\n2",
 						"e attac",
+						"RAPS se",
 						"der TRAP",
+						"216A to ",
 						"e.\\n216B "
 					]
 				}
@@ -117,15 +126,18 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
+				"tacker",
 				"acker ",
 				"rd pile",
 				"ile.\\n2",
 				"e attac",
+				"RAPS se",
 				"der TRAP",
+				"216A to ",
 				"e.\\n216B "
 			]
 		}
 	],
-	"updt": 1568696575310,
-	"edit": 18
+	"updt": 1569408725518,
+	"edit": 19
 }
