--- a/unknown_yuqh2v.t1_scraper.json
+++ b/unknown_yuqh2v.t1_scraper.json
@@ -6,22 +6,22 @@
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569421787052,
+	"last_scraped": 1569424127191,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569419329750,
-	"edit": 107,
-	"next_scrape": 1569467740783,
+	"updt": 1569421808814,
+	"edit": 108,
+	"next_scrape": 1569467285632,
 	"category": "coin_flipper",
-	"last_update": 1569421787052,
+	"last_update": 1569424127191,
 	"output": [
 		{
 			"args": {},
-			"calls": 986002,
+			"calls": 1007898,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"patter",
