--- a/unknown_bjl3my.pulse.json
+++ b/unknown_bjl3my.pulse.json
@@ -6,22 +6,22 @@
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569434584068,
+	"last_scraped": 1569436955864,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569432403305,
-	"edit": 106,
-	"next_scrape": 1569477703793,
+	"updt": 1569434659082,
+	"edit": 107,
+	"next_scrape": 1569477121118,
 	"category": "coin_flipper",
-	"last_update": 1569434584068,
+	"last_update": 1569436955864,
 	"output": [
 		{
 			"args": {},
-			"calls": 985613,
+			"calls": 1005410,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"you c",
