--- a/unknown_f43glc.pub_7lfra1.json
+++ b/unknown_f43glc.pub_7lfra1.json
@@ -6,22 +6,22 @@
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569436926592,
+	"last_scraped": 1569439278217,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569434659082,
-	"edit": 106,
-	"next_scrape": 1569477019356,
+	"updt": 1569437140759,
+	"edit": 107,
+	"next_scrape": 1569481308550,
 	"category": "coin_flipper",
-	"last_update": 1569436926592,
+	"last_update": 1569439278217,
 	"output": [
 		{
 			"args": {},
-			"calls": 993378,
+			"calls": 1003555,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"X7B_S",
