--- a/uknown_n1rumf.defender_auth.json
+++ b/uknown_n1rumf.defender_auth.json
@@ -6,22 +6,22 @@
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569443881572,
+	"last_scraped": 1569446165139,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569441650813,
-	"edit": 106,
-	"next_scrape": 1569487974917,
+	"updt": 1569446158830,
+	"edit": 108,
+	"next_scrape": 1569489850203,
 	"category": "dice_roller",
-	"last_update": 1569443881572,
+	"last_update": 1569446165139,
 	"output": [
 		{
 			"args": {},
-			"calls": 990116,
+			"calls": 1001314,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"mited",
