--- a/derelict_clrnxi.db.json
+++ b/derelict_clrnxi.db.json
@@ -6,22 +6,22 @@
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569451359565,
+	"last_scraped": 1569453661392,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569451343645,
-	"edit": 118,
-	"next_scrape": 1569493427452,
+	"updt": 1569451793427,
+	"edit": 119,
+	"next_scrape": 1569497502048,
 	"category": "dice_roller",
-	"last_update": 1569451359565,
+	"last_update": 1569453661392,
 	"output": [
 		{
 			"args": {},
-			"calls": 994184,
+			"calls": 1005332,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"t. ##",
