--- a/unknown_si4i7s.bot_brain.json
+++ b/unknown_si4i7s.bot_brain.json
@@ -6,22 +6,22 @@
 	"sector": "VNP_7267",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569453580219,
+	"last_scraped": 1569456039280,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569451343645,
-	"edit": 115,
-	"next_scrape": 1569499423453,
+	"updt": 1569453597027,
+	"edit": 116,
+	"next_scrape": 1569499806646,
 	"category": "coin_flipper",
-	"last_update": 1569453580219,
+	"last_update": 1569456039280,
 	"output": [
 		{
 			"args": {},
-			"calls": 987882,
+			"calls": 1000248,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y've ",
