--- a/uknown_glqjgs.random.json
+++ b/uknown_glqjgs.random.json
@@ -6,22 +6,22 @@
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569462802780,
+	"last_scraped": 1569465134379,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569460584366,
-	"edit": 118,
-	"next_scrape": 1569502590806,
+	"updt": 1569462839273,
+	"edit": 119,
+	"next_scrape": 1569509965000,
 	"category": "coin_flipper",
-	"last_update": 1569462802780,
+	"last_update": 1569465134379,
 	"output": [
 		{
 			"args": {},
-			"calls": 996559,
+			"calls": 1000929,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"w you",
